CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

FIND_PACKAGE(Torch)
FIND_PACKAGE(CUDA 5.5 REQUIRED)

add_definitions(-std=c++11 -fPIC)
LIST(APPEND CUDA_NVCC_FLAGS "-arch=sm_20 -Xcompiler -fPIC")

IF(DEFINED Torch_INSTALL_INCLUDE)
  SET(THC_INSTALL_INCLUDE ${Torch_INSTALL_INCLUDE})
  SET(TH_INSTALL_INCLUDE ${Torch_INSTALL_INCLUDE})
  SET(TH_INSTALL_LIB ${Torch_INSTALL_LIB})
  SET(THC_INSTALL_LIB ${Torch_INSTALL_LIB})
ENDIF()

INCLUDE_DIRECTORIES(
  ${THC_INSTALL_INCLUDE}/THC
  ${THC_INSTALL_INCLUDE}
  ${TH_INSTALL_INCLUDE}/TH
  ${TH_INSTALL_INCLUDE}
  ${CUDA_INCLUDE_DIRS}
)

LINK_DIRECTORIES(${TH_INSTALL_LIB} ${THC_INSTALL_LIB})

file(GLOB src-cuda *.cu)

CUDA_ADD_LIBRARY(cunn STATIC ${src-cuda})

ADD_LIBRARY(cunnproduction SHARED cunn.cpp)
ADD_LIBRARY(cunnproduction_static STATIC cunn.cpp)

TARGET_LINK_LIBRARIES(cunnproduction TH THC cunn)
TARGET_LINK_LIBRARIES(cunnproduction_static TH THC cunn)

INSTALL(TARGETS cunnproduction LIBRARY DESTINATION lib)
INSTALL(TARGETS cunnproduction_static ARCHIVE DESTINATION lib)
INSTALL(FILES cunn.h DESTINATION include)
